src/snapshots/multi_output_viewer__state__test__secondary_output__clamps_cursor_down.snap
---
source: src/state.rs
description: "|state|\n    {\n        state.new_secondary_output(\"one\".into()).new_secondary_output(\"two\".into()).move_cursor_down().move_cursor_down().move_cursor_down().move_cursor_down().render().unwrap();\n    }"
---
# Rendered:
```

  ---   0s one
> ---   0s two
```


# Raw:
```
[1G[1B  [38;5;10m---[39m   0s one
> [38;5;10m---[39m   0s two

```
