src/snapshots/multi_output_viewer__state__test__secondary_output__only_shows_most_recent_lines.snap
---
source: src/state.rs
description: "|state|\n    {\n        let id = state.new_secondary_output(\"out\".into());\n        state.handle_secondary_bytes(&id,\n                            b\"a\\r\\nb\\r\\nc\\r\\nd\\r\\n\").unwrap().toggle_current_selection_expanded().render().unwrap();\n    }"
---
# Rendered:
```

> +++   0s out
b
c
d
```


# Raw:
```
[1G[1B> [38;5;11m+++[39m   0s out
b
c
d

```
