src/snapshots/multi_output_viewer__state__test__secondary_output__shows_titles_and_durations.snap
---
source: src/state.rs
description: "|state|\n    {\n        state.new_secondary_output(\"first title\".into());\n        MockClock::advance(Duration::from_secs(1));\n        state.new_secondary_output(\"second title\".into());\n        MockClock::advance(Duration::from_secs(1));\n        state.render().unwrap();\n    }"
---
# Rendered:
```

> ---   2s first title
  ---   1s second title
```


# Raw:
```
[1G[1B> [38;5;10m---[39m   2s first title
  [38;5;10m---[39m   1s second title

```
